# Eidolon

./: CONTRIBUTING.md  Cargo.toml  README.md  eidolon_nnue.safetensors  justfile
eidolon-bin/: Cargo.toml
eidolon-bin/src/: autoplay.rs  bench.rs  epd.rs  main.rs  uci.rs
eidolon-lib/: Cargo.toml  build.rs
eidolon-lib/src/: constants.rs  lib.rs  perft.rs  search.rs  transposition_hashmap.rs
eidolon-lib/src/chess/: bitboard.rs  gamestate.rs  mod.rs  move_generator.rs  piece.rs  player.rs  position.rs  scores.rs  seen_hashmap.rs  weights.rs  zobrist.rs
eidolon-lib/src/chess/move_struct/: compact_move.rs  mod.rs
nnue-constants/: Cargo.toml
nnue-constants/src/: lib.rs
sanity-check/: Cargo.toml
sanity-check/src/: main.rs
src/: autoplay.rs  benchmark.rs  chess_game.rs  constants.rs  epd.rs  gamestate.rs  lib.rs  main.rs  move_struct.rs  performance_test.rs  piece.rs  position.rs  search.rs  uci.rs  zobrist.rs
src/chess/: bitboard.rs  deltas.rs  gamestate.rs  mod.rs  move_generator.rs  move_struct.rs  piece.rs  position.rs  scores.rs  zobrist.rs
torch-trainer/: Cargo.toml
torch-trainer/src/: lib.rs  main.rs
visualizer/: Cargo.toml
visualizer/src/: main.rs
