[package]
name = "rustybait"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
nohash-hasher = "0.2"

[profile.release]
debug = "full"

[profile.release-lto]
# We want our engine to be as fast as possible
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"
